# law-summarization

./: Cargo.toml  law_summaries.sq3  law_summaries.sq3-shm  law_summaries.sq3-wal
api/: Cargo.toml
api/src/: configuration.rs  configuration.toml  error.rs  logger.rs  main.rs  state.rs
api/src/api/: app_router.rs  mod.rs  router.rs  static_router.rs
api/src/api/layers/: cors.rs  mod.rs
api_client/: README.md  pubspec.yaml
api_client/android/app/: build.gradle.kts
api_client/ios/Runner/: Info.plist
api_client/ios/Runner.xcodeproj/: project.pbxproj
api_client/lib/: main.dart
api_client/lib/src/: services.dart  themes.dart
api_client/lib/src/controls/: calendar.dart  docs_list.dart  document_widget.dart  error_snack.dart  health_status.dart  image_viewer copy.dart  image_viewer.dart  left_panel.dart  task_progress.dart  toast.dart
api_client/lib/src/events/: calendar_events.dart  documents_events.dart  event.dart
api_client/lib/src/providers/: calendar_provider.dart  documents_provider.dart  error_provider.dart  health_provider.dart  image_provider.dart  select_document_provider.dart  task_progress_provider.dart
api_client/lib/src/services/: calendar_service.dart  documents_service.dart  error_service.dart  health_service.dart  image_viewer_service.dart  task_progress_service.dart
api_client/linux/runner/: my_application.cc
api_client/macos/Runner.xcodeproj/: project.pbxproj
api_client/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
api_client/macos/Runner/Configs/: AppInfo.xcconfig
api_client/native/hub/: Cargo.toml
api_client/native/hub/src/: client.rs  configuration.rs  lib.rs  logger.rs
api_client/native/hub/src/actors/: mod.rs  services.rs
api_client/native/hub/src/signals/: mod.rs
api_client/web/: index.html
api_client/windows/runner/: Runner.rc
shared/: Cargo.toml
shared/src/: lib.rs
summarization-core/: Cargo.toml
summarization-core/src/: configuration.rs  lib.rs  logger.rs  scheduler.rs
summarization-core/src/ai_service/: llama.txt  mod.rs
summarization-core/src/database/: commands.rs  connection.rs  documents.rs  mod.rs  service.rs
summarization-core/src/publication_service/: mod.rs
summarization-core/src/recognition/: mod.rs
