[package]
name = "law-summarization"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["api", "summarization-core", "api_client/native/*"]
default-members = ["api"]
[workspace.dependencies]
axum = "0.8.9"
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.9.0", features = ["sqlite", "macros", "runtime-tokio"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
publication-client = { git = "https://github.com/p40b0s/publication_api.git", package = "publication-client" }
utilites = { git = "https://github.com/P40b0s/help_utilites.git", package = "utilites", features = ["dates"]}
uuid = { version = "1.8.0", features = ["v4"] }
arc-swap = "1.9.1"
bytes = "1.11.1"
figment = {version = "0.10.19", features = ["toml", "env"]}
tower-http = { version = "0.6.11", features = ["cors"] }
