[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
publication-client.workspace = true
utilites.workspace = true
figment.workspace = true
summarization-core = { path = "../summarization-core" }
arc-swap.workspace = true
tower-http.workspace = true
include_dir = "0.7.4"
thiserror="2.0.18"
chrono = "0.4"
