[package]
name = "summarization-core"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
publication-client.workspace = true
utilites.workspace = true
uuid.workspace = true
image = "0.25.10"
base64="0.22.1"
reqwest = { version = "0.13.3", features = ["json"] }
arc-swap.workspace = true
bytes.workspace = true
chrono = "0.4"
futures = "0.3"
