[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2024"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
wildcard_imports = "deny"

[dependencies]
rinf = "8.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json="1.0.150"
tokio = { version = "1.52.3", features = ["rt", "macros", "time"] }
async-trait = "0.1.89"
messages = "0.3.1"
reqwest =  {version = "0.13.4", features=["json"]}
reqwest-middleware = "0.5.2"
reqwest-retry = "0.9.1"
tracing="0.1.44"
tracing-subscriber="0.3.23"
figment = {version = "0.10.19", features=["env", "toml"]}
anyhow = "*"
utilites = { git = "https://github.com/P40b0s/help_utilites.git", package = "utilites", features = ["dates"]}
shared ={ path = "../../../shared"}

# Uncomment below to target the web.
# tokio_with_wasm = { version = "0.8.5", features = ["rt", "macros", "time"] }
# wasm-bindgen = "0.2.100"
